--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <script>
-    const memory = new WebAssembly.Memory({ initial: 50 });
+    const memory = new WebAssembly.Memory({ initial: 62 });
     const abort = (msg, file, line, column) => {
       // msg and file are offsets of the respective strings in memory
       // line and column are integers
@@ -40,22 +40,23 @@
         const exports = module.instance.exports;
 
         // Fill input at [0, s-1] with random live cells
-        const mem = new Uint8Array(memory.buffer);
+        const mem = new Uint32Array(memory.buffer);
 
         // get canvas
         const canvas = document.getElementById("resultCanvas");
         const ctx = canvas.getContext('2d');
         const canvasWidth = canvas.width;
         const canvasHeight = canvas.height;
-
         //        document.getElementById("startButtonId").onclick = function () {
         const startTime = new Date();
 
         exports.init(canvasWidth, canvasHeight)
-          ;
-        const imageData = ctx.getImageData(0, 0, canvasWidth, canvasHeight);
-        imageData.data.set(mem); é
-        ctx.putImageData(imageData, 0, 0);
+        exports.addSphere()
+        console.log(exports.test())
+        console.log(mem[0])
+        // const imageData = ctx.getImageData(0, 0, canvasWidth, canvasHeight);
+        // imageData.data.set(mem);
+        // ctx.putImageData(imageData, 0, 0);
 
         const totalDuration = (new Date() - startTime) / 1000;
         document.getElementById("resultDiv").innerHTML = "Render completed! " + totalDuration + " seconds!";
