--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <script>
-    const memory = new WebAssembly.Memory({ initial: 300, max: 10000 });
+    const memory = new WebAssembly.Memory({ initial: 1000, max: 10000 });
     const abort = (msg, file, line, column) => {
       // msg and file are offsets of the respective strings in memory
       // line and column are integers
@@ -60,6 +60,7 @@
         console.log(mem[0], mem[1], mem[2], mem[3], )
         console.log(mem[4], mem[5], mem[6], mem[7], )
         console.log(mem[8], mem[9], mem[10], mem[11], )
+        console.log(mem.byteLength)
         ctx.putImageData(imageData, 0, 0);
         const totalDuration = (new Date() - startTime) / 1000;
         document.getElementById("resultDiv").innerHTML = "Render completed! " + totalDuration + " seconds!";
