switch to optimization level 3

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 
     // Fetch and instantiate the module
-    WebAssembly.instantiateStreaming(fetch("/build/untouched.wasm"), {
+    WebAssembly.instantiateStreaming(fetch("/build/optimized.wasm"), {
       env: { memory, abort },
       JSMath: Math,
       console: {
